Closed Bug 385635 Opened 18 years ago Closed 18 years ago

content overflows table cell

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: peter, Assigned: roc)

References

()

Details

(Keywords: regression, testcase)

Attachments

(4 files, 1 obsolete file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a6pre) Gecko/20070623 Minefield/3.0a6pre Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a6pre) Gecko/20070623 Minefield/3.0a6pre At the bottom of the topic list on the example page, the "Goto ..." text links render over into the DIV containing the recent postings. Reproducible: Always Steps to Reproduce: 1. Visit site 2. Scroll down 3. See effect Actual Results: The "Goto ..." text links render over into the DIV containing the recent postings. Expected Results: The right edge of the text should line up with the left edge of the DIV This changed with the nightly of 2007-06-21.
Can confirm that even for forums.mozillazine.org. Simply select a thread with several pages and you see the effect at the top and the bottom. Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a6pre) Gecko/20070623 Minefield/3.0a6pre ID:2007062304
Confirming issue under both Win32 and Linux. Assuming this is new textframe issue. Changing component.
Status: UNCONFIRMED → NEW
Component: General → GFX: Thebes
Ever confirmed: true
OS: Windows XP → All
Product: Firefox → Core
QA Contact: general → thebes
Hardware: PC → All
Version: unspecified → Trunk
Attached file testcase
Blocks: 367177
Component: GFX: Thebes → Layout
Keywords: regression, testcase
QA Contact: thebes → layout
Attached image screenshot
Flags: blocking1.9?
Assignee: nobody → roc
Flags: blocking1.9? → blocking1.9+
I've also seen images overflowing table cells vertically. Not sure if that's the same bug.
Summary: text overlaps div → content overflows table cell
That's probably a different bug.
Attached patch fix (obsolete) — Splinter Review
Relatively simple bug and fix in min-width computation: when a word isn't entirely trimmable white-space, we need to clear existing aData->trailingWhitespace, because it's no longer trimmable, not being at the putative end of the line. This patch also cleans up the pref-width computation to match min-width more closely.
Attachment #279685 - Flags: review?(smontagu)
Comment on attachment 279685 [details] [diff] [review] fix This looks like the wrong patch
Attached patch right patchSplinter Review
Attachment #279685 - Attachment is obsolete: true
Attachment #280322 - Flags: review?(smontagu)
Attachment #279685 - Flags: review?(smontagu)
Attached file testcase2
I see a simlar problem on http://www.myanmar.com/religion/index.html This is a testcase based on that site.
Simon, could you review the patch? I think this is also the reason why I get a horizontal scrollbar at http://news.google.nl/ .
Simon, this is a pretty bad regression that I'd like fixed ASAP
Attachment #280322 - Flags: review?(smontagu) → review+
Checked in. The testcases in bug 393096 require this patch to pass, so we can mark this in-testsuite when those land.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Ok, the url and the testcase are now worksforme. My testcase2, http://www.myanmar.com/religion/index.html , and http://news.google.nl/ still show the issue, but I guess that's basically bug 393096.
Flags: in-testsuite?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: