Bug 385635. Make text min-width calculation clear out old value of trimmable whitespace when the text contains non-collapsible whitespace. Also, set skipWhitespace to skip subsequent whitespace only if the trailing whitespace in the text is not preformatted. r=smontagu